z-index fix

--- a/less/_mobile_main.less
+++ b/less/_mobile_main.less
@@ -5,8 +5,6 @@
 	}
 
 	#section411-banner {
-		z-index: 105;
-
 		font-size: 14px;
 		line-height: 1.5 * 14px;
 		box-shadow: none;
