--- a/less/style.less
+++ b/less/style.less
@@ -40,6 +40,7 @@ html.ie7, html.ie8 {
 }
 
 #section411-banner {
+	z-index: 105;
 	box-sizing: border-box;
 	background: #1e5f4b;
 	color: #fff;
